# glass-ml-2026

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_data_exploration.ipynb  01_density_exploration.ipynb  01_tg_exploration.ipynb  02_baseline_model.ipynb  02_baseline_models.ipynb  03_density_model.ipynb
notebooks/.ipynb_checkpoints/: 01_data_exploration-checkpoint.ipynb
src/: data.py  model.py
