[project]
name = "glass-ml-2026"
version = "0.1.0"
description = "Predicting glass properties using machine learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "glasspy>=0.6.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
[tool.ruff]
line-length = 88